change environment variables

--- a/busy-env/Dockerfile
+++ b/busy-env/Dockerfile
@@ -1,6 +1,6 @@
 FROM busybox
-ENV FIRSTNAME Leadel
-ENV SECONDNAME Ngalame
+ENV FIRSTNAME Leacoco
+ENV SECONDNAME Nobody
 ADD bar /bar
 WORKDIR /bar
 ENTRYPOINT ["top", "-b"]
